add test app for drag and drop SUD WAV extraction